--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h2 class="title">Gedankener</h2>
         
         <div class="bio" contenteditable="true" id="bio">
-            Welcome! I'm an engineer who loves building things that work. My curiosity has taken me on a journey through every layer of technology, from the precision of clean room nanofabrication all the way to product design and customer-facing sales. These days, I'm diving into software engineering, applying everything I've learned along the way.
+            Welcome! I'm a curious engineer.
         </div>
     </div>
 
